@@ -96,6 +96,7 @@
                     <source>21</source>
                     <target>21</target>
                     <release>21</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
